Dia-5/nginx-ingress-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: nginx-ingress-lb
  template:
    metadata:
      labels:
        app: nginx-ingress-lb
    spec:
      terminationGracePeriodSeconds: 60
      serviceAccount: nginx
      containers:
        - name: nginx-ingress-controller
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.9.0
          imagePullPolicy: Always
          #readinessProbe:
          #  httpGet:
          #    path: /healthz
          #    port: 10254
          #    scheme: HTTP
          #livenessProbe:
          #  httpGet:
          #    path: /healthz
          #    port: 10254
          #    scheme: HTTP
          #  initialDelaySeconds: 10
          #  timeoutSeconds: 5
          args:
            - /nginx-ingress-controller
            - --default-backend-service=ingress/default-backend
            - --configmap=ingress/nginx-ingress-controller-conf
            - --v=2
          resources:
            limits:
              memory: "32Mi"
              cpu: "50m"
          ports:
            - containerPort: 80
            - containerPort: 18080
