Dia-5/default-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-backend
spec:
  selector:
    app: default-backend
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
