Dia-5/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: app-ingress
  labels:
    name: app-ingress
spec:
  rules:
  - host: meuk8s.com
    http:
      paths:
      - backend:
          serviceName: appsvc1
          servicePort: 80
        patch: /app1
      - backend:
          serviceName: appsvc2
          servicePort: 80
        patch: /app2
