Dia-5/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    name: nginx-ingress
spec:
  rules:
  - host: meuk8s.com
    http:
      paths:
      - path: /nginx_status
        pathType: Prefix
        backend:
          service:
            name: nginx-ingress
            port:
              number: 18080
